created new palette form edit colour form edit palette form

--- a/app/views/palettes/index.html.erb
+++ b/app/views/palettes/index.html.erb
@@ -1,12 +1,23 @@
-<div class = "row">
+<div class="nav navbar">
+  <div class="nav navbar-brand">Palettes</div>
+  <div class="nav">
+    <%= link_to 'Colours', colours_path, class: "navbar nav-item btn btn-danger" %>
+    <%= link_to 'New Palette', new_palette_path, class: "navbar nav-item btn btn-primary" %>
+  </div>
+</div>
+<div class = "row" style="margin-left: 10px">
   <% @palettes.each do |p| %>
     <span class="col-md-4">
       <div class = "card" style="border-radius: 10px">
         <div class = "card-body row", style="overflow: auto; height: 200px">
-          <% p.colors.each do |col| %>
-            <span class="col-md-3" style="border-radius: 50%; background: rgb(<%= col.R %>, <%= col.G %>, <%= col.B %>); width:50px; height:50px; margin: 5px">
+          <% p.colours.each do |color| %>
+            <span class="col-md-3" style="border-radius: 50%; background: rgb(<%= color.R %>, <%= color.G %>, <%= color.B %>); width:50px; height:50px; margin: 0.8rem">
             </span>
           <% end %>
+        </div>
+        <div class="card-footer">
+          <%= link_to "#{p.name}", palette_path(id: p.id), style: "color:red" %>
+          <%= link_to '', palette_path(id: p.id) ,style: "float: right", class: "btn fa fa-trash", method: :delete %>
         </div>
       </div>
     </span>
