created form for new colour remove colour form in new palette

--- a/app/views/colours/create.js.erb
+++ b/app/views/colours/create.js.erb
@@ -1,1 +1,5 @@
-$("#colors").append("<li><%= @color.hex %></li>");
+<% if flash[:error] %>
+$("#message").html("<%= j flash[:error] %>");
+<% else %>
+$("#message").html("Colour <%= @colour.hex %> created");
+<% end %>
