--- a/app/views/palettes/new.html.erb
+++ b/app/views/palettes/new.html.erb
@@ -1,19 +1,15 @@
 <h3>Create a new Palette</h3>
 <% Palette.initialize_array %>
 <div class="card">
-  <ul>
-    <div id = "colors">
-    </div>
-  </ul>
-<%= form_tag(colours_path, remote:true) do %>
-<%= text_field_tag :color, nil, placeholder: 'color hex code' %>
-<%= text_field_tag :name , nil, placeholder: 'color name' %>
-<%= submit_tag 'Add color' %>
-<% end %>
+
+<%= link_to 'Create New Colour', new_colour_path %>
+
 </div>
-<br><br>
 
 <%= form_for :palette, url: palettes_path do |f| %>
 <%= f.text_field :name , placeholder: 'Palette Name' %>
 <%= f.submit :create_palette %>
 <% end %>
+
+
+<%= select_tag :select_colour, options_from_collection_for_select(@colours, 'id', 'name'), prompt: "Select Colour" %>
