--- a/app/views/palettes/new.html.erb
+++ b/app/views/palettes/new.html.erb
@@ -1,15 +1,20 @@
-<h3>Create a new Palette</h3>
-<% Palette.initialize_array %>
-<div class="card">
-
-<%= link_to 'Create New Colour', new_colour_path %>
-
-</div>
-
+<h3 align="center" class="shadow"><b>Create a new Palette</b></h3>
 <%= form_for :palette, url: palettes_path do |f| %>
-<%= f.text_field :name , placeholder: 'Palette Name' %>
-<%= f.submit :create_palette %>
+  <div class="row">
+    <%= f.text_field :name , placeholder: 'Palette Name', class: "col-md-4" %>
+    <%= f.submit :create_palette, class: "col-md-4 btn btn-primary" %>
+  </div>
 <% end %>
-
-
-<%= select_tag :select_colour, options_from_collection_for_select(@colours, 'id', 'name'), prompt: "Select Colour" %>
+<br>
+<div class="row">
+  <div class="col-md-4">
+  	<center>
+      <%= select_tag :select_colour, options_from_collection_for_select(@colours, 'id', 'name',), prompt: "<Select Colour>", class: "btn", style: "background: #ffa; color: blue" %><br>
+      &nbsp;&nbsp;&nbsp; Or <br>
+      <%= link_to 'Create New Colour', new_colour_path %>
+    </center>
+  </div>
+  <div>
+    Colors:<br>
+  </div>
+</div>
