--- a/app/assets/stylesheets/colours.scss
+++ b/app/assets/stylesheets/colours.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the colours controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+input.form-control[type='text'] {
+  width: 250px;
+}
