--- a/app/views/colours/new.html.erb
+++ b/app/views/colours/new.html.erb
@@ -4,16 +4,7 @@
     <%= link_to '< Go back to create palette', new_palette_path %>
   </p>
 
-  <center>
-    <div class="card shadow-lg" style="width: 30%; border-radius: 15px; padding: 20px ">
-      <div style="border-radius: 50%; height: 100px; width: 100px; background: #000"></div><br>
-      <%= form_for :colour, url: colours_path, remote: true do |f| %>
-        <%= f.text_field :name , placeholder: 'Colour Name' %><br><br>
-        <%= f.text_field :hex , placeholder: '#RRGGBB' %><br><br>
-        <%= f.submit 'Add Colour', class: "btn btn-success" %><br>
-      <% end %>
-      <div id="message">
-      </div>
-    </div>
-  </center>
+  <div >
+      <%= render 'form', save_button: 'Add' %>
+  </div>
 </div>
