redesign colors page added navbar in new_colour page added show colour page

--- a/app/assets/stylesheets/colours.scss
+++ b/app/assets/stylesheets/colours.scss
@@ -6,3 +6,11 @@
 input.form-control[type='text'] {
   width: 250px;
 }
+#preview{
+  width: 250px;
+  height: 40px;
+}
+
+.body{
+  margin: 20px;
+}
