--- a/app/views/palettes/index.html.erb
+++ b/app/views/palettes/index.html.erb
@@ -1,5 +1,5 @@
 <div class="nav navbar">
-  <div class="nav navbar-brand">Palettes</div>
+  <div class="nav navbar-brand"><b>Palettes</b></div>
   <div class="nav">
     <%= link_to 'Colours', colours_path, class: "navbar nav-item btn btn-danger" %>
     <%= link_to 'New Palette', new_palette_path, class: "navbar nav-item btn btn-primary" %>
