--- a/app/views/colours/_form.html.erb
+++ b/app/views/colours/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @colour, url: colours_path do |f| %>
+<%= form_for @colour do |f| %>
   <div class="form-group">
     <label for="colour_name">Name:</label>
     <%= f.text_field :name , placeholder: 'Enter colour name', class: 'form-control' %>
