--- a/app/views/colours/index.html.erb
+++ b/app/views/colours/index.html.erb
@@ -6,12 +6,12 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <div>
-      <ul class="nav navbar-nav mr-auto" style="flex-direction: row;">
-        <li><a class="nav-item nav-link fa fa-home" href="/palettes">Home</a></li>
-        <li><a class="nav-item nav-link fa fa-plus" href="colours/new">New Colour</a></li>
-        <li><a class="nav-item nav-link fa fa-plus" href="/palettes/new">New Palette</a></li>
-      </ul>
+    <div class="nav navbar-nav">
+      <a class="nav-item nav-link fa fa-home" href="/palettes">Home</a>
+    </div>
+    <div class="nav navbar-nav">
+      <a class="nav-item nav-link fa fa-plus" href="colours/new">New Colour</a>
+      <a class="nav-item nav-link fa fa-plus" href="/palettes/new">New Palette</a>
     </div>
   </div>
 </nav>
