--- a/app/views/palettes/index.html.erb
+++ b/app/views/palettes/index.html.erb
@@ -8,7 +8,7 @@
 <div class = "row" style="margin-left: 10px">
   <% @palettes.each do |p| %>
     <span class="col-md-4">
-      <div class = "card" style="border-radius: 10px">
+      <div class = "card shadow" style="border-radius: 10px">
         <div class = "card-body row", style="overflow: auto; height: 200px">
           <% p.colours.each do |color| %>
             <span class="col-md-3" style="border-radius: 50%; background: rgb(<%= color.R %>, <%= color.G %>, <%= color.B %>); width:50px; height:50px; margin: 0.8rem">
