created new palette page modified new colour page to preview colour

--- a/app/assets/stylesheets/colours.scss
+++ b/app/assets/stylesheets/colours.scss
@@ -3,10 +3,10 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-input.form-control[type='text'] {
+input.form-control[type='text']{
   width: 250px;
 }
-#preview{
+#preview, #colour_view{
   width: 250px;
   height: 40px;
 }
