--- a/app/assets/stylesheets/palettes.scss
+++ b/app/assets/stylesheets/palettes.scss
@@ -1,3 +1,32 @@
 // Place all the styles related to the palettes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.select2{
+  width: 20rem;
+  height: 40px;
+}
+
+.card{
+  width: 25rem;  
+}
+
+#palette_name{
+  width: 20rem;
+}
+
+.palette{
+  border-radius: 10px;
+}
+
+.palette-body{
+  overflow: auto;
+  height: 200px;
+}
+
+.palette-body .col-md-3{
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  margin: 0.8rem;
+}
