--- a/app/views/colours/index.html.erb
+++ b/app/views/colours/index.html.erb
@@ -1,9 +1,3 @@
-<h3 align="center" class="text-secondary"> All Colours </h3>
-<br>
-<% flash.each do |key, value| %>
-  <div class="alert alert-<%= key %>"><%= value %></div>
-<% end %>
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <div class="nav navbar-nav">
@@ -15,32 +9,31 @@
     </div>
   </div>
 </nav>
+<br>
 
-<div class="row">
-  <div class="container col-md-8">
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Code</th>
-          <th>Preview</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @colours.each do |colour| %>
-          <tr>
-            <td><%= colour.name %></td>
-            <td><%= colour.hex %></td>
-            <td style="background: <%= colour.hex %>"></td>
-            <td align="right"><%= link_to 'Change', edit_colour_path(colour.id) %></td>
-            <td align="right"><%= link_to 'Delete', colour_path(colour.id), method: :delete %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
-</div>
+<h3 align="center" class="text-secondary"> All Colours </h3>
+<br>
+<% flash.each do |key, value| %>
+  <div class="alert alert-<%= key %>"><%= value %></div>
+<% end %>
 
-  <div class="row">
-    
-  </div>
+<table class="container table">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Code</th>
+      <th>Preview</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @colours.each do |colour| %>
+      <tr>
+        <td><%= colour.name %></td>
+        <td><%= colour.hex %></td>
+        <td style="background: <%= colour.hex %>"></td>
+        <td align="right"><%= link_to 'Change', edit_colour_path(colour.id) %></td>
+        <td align="right"><%= link_to 'Delete', colour_path(colour.id), method: :delete %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
