--- a/app/views/palettes/new.html.erb
+++ b/app/views/palettes/new.html.erb
@@ -1,30 +1,37 @@
-<h3 align="center" class="shadow"><b>Create a new Palette</b></h3>
-<div class="card container body">
-  <div class="card-body">
-    <%= form_for :palette, url: palettes_path do |f| %>
-      <div class="row">
-        <%= f.text_field :name , placeholder: 'Palette Name', class: "col-md-6" %>
-        <%= f.submit :create_palette, class: "col-md-6 btn btn-primary" %>
-      </div>
-    <% end %>
-    <br>
-    <div class="row">
-      <div class="col-md-5">
-        <label for="sel">Choose Colours:</label>
-        <select multiple class="form-control" id="sel">
-          <% @colours.each do |colour| %>
-            <option value="<%= colour.name %>"><%= colour.name %></option>
-          <% end %>
-        </select>
-        Or <br>
-        <%= link_to 'Create New Colour', new_colour_path %>
-      </div>
-      <div>
-        <Button onClick="selectColour()">></Button>
-      </div>
-      <div>
-        Colors:<br>
-      </div>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <div class="nav navbar-nav">
+      <a class="nav-item nav-link fa fa-home" href="/palettes">Home</a>
+    </div>
+    <div class="nav navbar-nav">
+      <a class="nav-item nav-link fa fa-plus" href="/colours/new">New Colour</a>
     </div>
   </div>
+</nav>
+<br>
+
+<h3 align="center" class="shadow"><b>Create a new Palette</b></h3>
+<div class="card container body" id="palette">
+  <div class="card-body">
+    <%= form_for :palette, url: palettes_path do |f| %>
+      <p>
+      <label for="selection"><b>Choose Colours</b></label>
+      <%= f.select :colour_ids, @colours.collect {|a| [a.name, a.id]}, {}, class: 'select2', id: "selection", multiple: true %>
+      </p>
+
+      <p>
+        <b><%= f.label :name, for: :palette_name %></b><br>
+        <%= f.text_field :name %><br>
+      </p>
+
+      <%= f.submit :create_palette, class: "btn btn-success" %>
+    <% end %>
+  </div>
 </div>
+
+<script>
+  $('#selection').select2({
+    theme: "bootstrap"
+  });
+</script>
