--- a/app/views/palettes/show.html.erb
+++ b/app/views/palettes/show.html.erb
@@ -1,31 +1,34 @@
-<div class="row">
-  <div class="col-md-5">
-      <div class = "card" style="border-radius: 10px; margin-left: 20px">
-        <div class = "card-body row", style="overflow: auto; height: 200px">
-          <% @palette.colours.each do |color| %>
-            <span title="xyz" class="col-md-3" style="border-radius: 50%; background: rgb(<%= color.R %>, <%= color.G %>, <%= color.B %>); width:50px; height:50px; margin: 0.8rem">
-            </span>
-          <% end %>
-        </div>
-        <div class="card-footer">
-          <%= link_to "#{@palette.name}", palette_path(id: @palette.id), style: "color:red" %>
-          <%= link_to '', palette_path(id: @palette.id) ,style: "float: right", class: "btn fa fa-trash", method: :delete %>
-        </div>
-      </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <div class="nav navbar-nav">
+      <a class="nav-item nav-link fa fa-home" href="/palettes">Home</a>
+    </div>
+    <div class="nav navbar-nav">
+      <a class="nav-item nav-link fa fa-plus" href="/colours/new">New Colour</a>
+      <a class="nav-item nav-link fa fa-plus" href="/palettes/new">New Palette</a>
+    </div>
   </div>
-  <div class="col-md-5">
-    <%= form_tag(palettes_add_colour_path(id: @palette.id), local: true) do %>
-    <%= label_tag :enter_hex_code %>
-    <%= text_field_tag :color %><br>
-    <%= label_tag :color_name %>
-    <%= text_field_tag :name %>
-    <%= submit_tag 'Add color' %>
-    <% end %>
-    <br><br>
+</nav>
+<br>
 
-    <%= form_with(model: @palette, local: true) do |f| %>
-      <%= f.label :name %>
-      <%= f.text_field :name %>
+<h3 align="center" class="shadow"><b>Palette: <%= @palette.name %></b></h3>
+<br>
+
+<table class="table container">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Code</th>
+      <th>Preview</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @palette.colours.each do |colour| %>
+      <tr>
+        <td><%= colour.name %></td>
+        <td><%= colour.hex %></td>
+        <td style="background: <%= colour.hex %>"></td>
+      </tr>
     <% end %>
-  </div>
-</div>
+  </tbody>
+</table>
