--- a/app/views/palettes/edit.html.erb
+++ b/app/views/palettes/edit.html.erb
@@ -1,4 +1,3 @@
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <div class="nav navbar-nav">
@@ -6,14 +5,16 @@
     </div>
     <div class="nav navbar-nav">
       <a class="nav-item nav-link fa fa-plus" href="/colours/new">New Colour</a>
+      <a class="nav-item nav-link fa fa-plus" href="/palettes/new">New Palette</a>
     </div>
   </div>
 </nav>
 <br>
 
-<h3 align="center" class="shadow"><b>Create a new Palette</b></h3>
+<h3 align="center" class="shadow"><b>Palette: <%= @palette.name %></b></h3>
+<br>
 
-<%= render 'form', colours: @colours, save_button: 'Create Palette' %>
+<%= render 'form', colours: @colours, save_button: 'Update' %>
 
 <script>
   $('#selection').select2({
