--- a/app/views/palettes/index.html.erb
+++ b/app/views/palettes/index.html.erb
@@ -1,26 +1,47 @@
-<div class="nav navbar bg-light">
+<nav class="nav navbar bg-light">
   <div class="nav navbar-brand"><b>Palettes</b></div>
   <div class="nav">
     <%= link_to 'Colours', colours_path, class: "nav-link nav-item btn btn-danger", style: "margin-right: 10px" %>
     <%= link_to 'New Palette', new_palette_path, class: "nav-link nav-item btn btn-info" %>
   </div>
-</div>
-<div class = "row body">
-  <% @palettes.each do |p| %>
-    <span class="col-md-4">
-      <div class = "card shadow palette">
-        <div class = "card-body row palette-body">
-          <% p.colours.each do |colour| %>
-            <span class="col-md-3" style="background: <%= colour.hex %>">
-            </span>
-          <% end %>
-        </div>
-        <div class="card-footer">
-          <%= link_to "#{p.name}", palette_path(id: p.id), style: "color:red" %>
-          <%= link_to '', palette_path(id: p.id) ,style: "float: right", class: "btn fa fa-trash", method: :delete %>
-        </div>
-      </div>
-    </span>
-  <% end %>
-</div>
+</nav>
 
+<% flash.each do |key, value| %>
+  <div class="alert alert-<%= key %>"><%= value %></div>
+<% end %>
+
+<table id = "palettes" class="table container panel panel-default" style = "width: 30rem;">
+  <% if @palettes.empty? %>
+    No Palettes to show
+  <% else %>
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Colours</th>
+      </tr>
+    </thead>
+    <% @palettes.each do |palette| %>
+      <tr>
+        <td><%= link_to "#{palette.name}", palette_path(id: palette.id) %></td>
+        <td>
+          <div id="swatches">
+            <% palette.colours.each do |colour| %>
+              <span id="swatch" style="background: <%= colour.hex %>">
+              </span>
+            <% end %>    
+          </div>
+        </td>
+        <td>
+          <a href=<%= edit_palette_path(id: palette.id) %> ><i class="fa fa-edit"></i></a>
+        </td>
+        <td>
+          <a href=<%= palette_path(id: palette.id) %> data-method="delete"><i class="fa fa-trash"></i></a>
+        </td>
+      </tr>
+    <% end %>
+    <center>
+    <%= paginate @palettes, theme: 'twitter-bootstrap-4', pagination_class: "pagination-sm",              nav_class: "d-inline-b" %>
+    <%= page_entries_info @palettes %>
+    </center>
+  <% end %>
+</table>
