--- a/app/views/colours/no_colour.html.erb
+++ b/app/views/colours/no_colour.html.erb
@@ -1,4 +1,4 @@
-<center style="margin-top: 100px">
+<center id="invalid_record">
   <b>No Such Colour</b><br>
   <%= link_to 'Go To Home', root_url, class: "fa fa-home" %>
 </center>
