--- a/app/views/palettes/show.html.erb
+++ b/app/views/palettes/show.html.erb
@@ -17,7 +17,7 @@
 <table class="table container">
   <thead>
     <tr>
-      <th>Name</th>
+      <th>Colour</th>
       <th>Code</th>
       <th>Preview</th>
     </tr>
