--- a/app/views/palettes/index.html.erb
+++ b/app/views/palettes/index.html.erb
@@ -10,7 +10,8 @@
   <div class="alert alert-<%= key %>"><%= value %></div>
 <% end %>
 
-<table id = "palettes" class="table container panel panel-default" style = "width: 30rem;">
+<div class="pull-right"><%= page_entries_info @palettes %></div>
+<table id = "palettes" class="table container panel panel-default" >
   <% if @palettes.empty? %>
     No Palettes to show
   <% else %>
@@ -18,6 +19,7 @@
       <tr>
         <th>Name</th>
         <th>Colours</th>
+        <th>Action</th>
       </tr>
     </thead>
     <% @palettes.each do |palette| %>
@@ -33,15 +35,12 @@
         </td>
         <td>
           <a href=<%= edit_palette_path(id: palette.id) %> ><i class="fa fa-edit"></i></a>
-        </td>
-        <td>
           <a href=<%= palette_path(id: palette.id) %> data-method="delete"><i class="fa fa-trash"></i></a>
         </td>
       </tr>
     <% end %>
-    <center>
-    <%= paginate @palettes, theme: 'twitter-bootstrap-4', pagination_class: "pagination-sm",              nav_class: "d-inline-b" %>
-    <%= page_entries_info @palettes %>
-    </center>
   <% end %>
 </table>
+<div id="pagination">
+  <%= paginate @palettes, theme: 'twitter-bootstrap-4', pagination_class: "pagination-sm",              nav_class: "d-inline-b" %>
+</div>
